# tunix-dpo

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup_tpu_env.sh
configs/: dpo_v5e.yaml  dpo_v5e.yaml.example
infra/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infra/terraform/environments/dev/: terraform.tfvars  terraform.tfvars.example
infra/terraform/scripts/: startup.sh
scripts/: tpu_provision.sh
src/: __init__.py
src/tunix-dpo/data/: curate.py  formatter.py
src/tunix_dpo/: __init__.py
src/tunix_dpo/data/: __init__.py  curate.py  formatter.py  parser.py
src/tunix_dpo/evaluation/: __init__.py  compare.py  runner.py  stats.py  toxigen.py  truthfulqa.py
src/tunix_dpo/serving/: __init__.py  engine.py  export.py  metrics.py  schemas.py  server.py
src/tunix_dpo/training/: __init__.py  config.py  dataset.py  logger.py  losses.py  optimizer.py  train.py
tests/: conftest.py
tests/integration/: test_compare.py  test_curate_pipeline.py
tests/unit/: test_data.py  test_losses.py  test_metrics.py  test_schemas.py  test_stats.py
