[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "tunix-dpo"
version         = "0.2.0"
description     = "End-to-end DPO alignment pipeline for Gemma 3 1B IT — HH-RLHF curation, TPU training, TruthfulQA / ToxiGen benchmarking, vLLM serving."
readme          = "README.md"
requires-python = ">=3.11,<3.13"
license         = { text = "Apache-2.0" }
authors         = [{ name = "Yannick Obam" }]
keywords        = ["llm", "alignment", "dpo", "gemma", "tpu", "jax"]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "datasets>=2.18",
    "huggingface-hub>=0.22",
    "transformers>=4.50",         # Gemma 3 support requires >= 4.50
    "tokenizers>=0.20",
    "pydantic>=2.6",
    "click>=8.1",
]

[project.optional-dependencies]
training = [
    "jax>=0.4.30",
    "flax>=0.8",
    "optax>=0.2",
    "orbax-checkpoint>=0.5",
    "tensorboard>=2.16",
]
serving = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "vllm>=0.5.5; platform_system != 'Darwin'",
    "torch>=2.4; platform_system != 'Darwin'",
    "safetensors>=0.4",
]
eval = [
    "matplotlib>=3.8",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
all = ["tunix-dpo[training,serving,eval,dev]"]

[project.scripts]
tunix-curate = "tunix_dpo.data.curate:main"
tunix-train  = "tunix_dpo.training.train:main"
tunix-eval   = "tunix_dpo.evaluation.runner:main"
tunix-export = "tunix_dpo.serving.export:main"
tunix-serve  = "tunix_dpo.serving.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
